# PyOpenROAD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md
.github/workflows/: build_and_release.yml
etc/: BuildMultiPythonPackage.sh  BuildPythonPackage.sh  DependencyInstaller.sh  InstallerConda.sh  ManylinuxDependencyInstaller.sh
python/: create_package.py  create_package_on_manylinux.py
src/: PyModule.cc
test/: test.py
